refactor(schema/openapi): restructure namespaces and routes
